feat: 支持移动端touch

--- a/demo.html
+++ b/demo.html
@@ -32,7 +32,7 @@
   <div>sdfasdf</div>
   <script src="./dist/index.js"></script>
   <script type="module" crossorigin="anonymous">
-    const Drag = window.drag.Drag
+    const Drag = window.Drag.default
     new Drag(btn, {
       onClick: (e) => {
         console.log(e)
